infra/k8s/mr-dj-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mr-dj-http
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
    - host: mr-dj.sevensa.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mr-dj-frontend
                port:
                  number: 80
